feat: AI 추천 기념품 조회에 찜 수/여부 추가