@@ -11,6 +11,7 @@ import com.souzip.domain.file.File;
 import com.souzip.domain.recommend.ai.dto.AiRecommendationResponse;
 import com.souzip.domain.recommend.ai.repository.AiRecommendationRepositoryCustom;
 import com.souzip.domain.souvenir.entity.Souvenir;
+import com.souzip.domain.wishlist.repository.WishlistRepository;
 import com.souzip.global.clova.ClovaStudioClient;
 import com.souzip.global.clova.PromptLoader;
 import lombok.RequiredArgsConstructor;
@@ -33,6 +34,7 @@ public class AiRecommendationService {
     private final ObjectMapper objectMapper;
     private final FileQueryService fileQueryService;
     private final FileStorage fileStorage;
+    private final WishlistRepository wishlistRepository;
 
     public AiRecommendationResponse getCategoryRecommendationsForUser(Long userId) {
         log.info("getCategoryRecommendationsForUser 시작, userId={}", userId);
@@ -65,7 +67,7 @@ public class AiRecommendationService {
         log.info("추천 이름 파싱: {}", recommendedNamesByCategory);
 
         return new AiRecommendationResponse(
-                mapToRecommendedSouvenirs(recommendedNamesByCategory)
+                mapToRecommendedSouvenirs(recommendedNamesByCategory, userId)
         );
     }
 
@@ -107,20 +109,28 @@ public class AiRecommendationService {
         Map<String, List<String>> recommendedNamesByCategory = parseClovaResponse(clovaResponse);
         log.info("추천 이름 파싱: {}", recommendedNamesByCategory);
 
-        List<AiRecommendationResponse.RecommendedSouvenir> finalSouvenirs =
-                recommendedNamesByCategory.values().stream()
-                        .flatMap(List::stream)
-                        .map(aiRecommendationRepository::findByName)
-                        .filter(Optional::isPresent)
-                        .map(Optional::get)
-                        .map(s -> AiRecommendationResponse.RecommendedSouvenir.from(
-                                s.getId(),
-                                s.getName(),
-                                s.getCategory().name(),
-                                s.getCountryCode(),
-                                getThumbnailUrl(s.getId())
-                        ))
-                        .collect(Collectors.toList());
+        List<Souvenir> souvenirs = recommendedNamesByCategory.values().stream()
+                .flatMap(List::stream)
+                .map(aiRecommendationRepository::findByName)
+                .filter(Optional::isPresent)
+                .map(Optional::get)
+                .collect(Collectors.toList());
+
+        List<Long> souvenirIds = souvenirs.stream().map(Souvenir::getId).toList();
+        Set<Long> wishlistedIds = wishlistRepository.findSouvenirIdsByUserId(userId);
+        Map<Long, Long> wishlistCountMap = wishlistRepository.countBySouvenirIds(souvenirIds);
+
+        List<AiRecommendationResponse.RecommendedSouvenir> finalSouvenirs = souvenirs.stream()
+                .map(s -> AiRecommendationResponse.RecommendedSouvenir.from(
+                        s.getId(),
+                        s.getName(),
+                        s.getCategory().name(),
+                        s.getCountryCode(),
+                        getThumbnailUrl(s.getId()),
+                        wishlistCountMap.getOrDefault(s.getId(), 0L),
+                        wishlistedIds.contains(s.getId())
+                ))
+                .collect(Collectors.toList());
 
         log.info("최종 추천 souvenirs 개수: {}", finalSouvenirs.size());
         return new AiRecommendationResponse(finalSouvenirs);
@@ -183,7 +193,8 @@ public class AiRecommendationService {
     }
 
     private List<AiRecommendationResponse.RecommendedSouvenir> mapToRecommendedSouvenirs(
-            Map<String, List<String>> recommendedNamesByCategory
+            Map<String, List<String>> recommendedNamesByCategory,
+            Long userId
     ) {
         List<Souvenir> souvenirs = recommendedNamesByCategory.values().stream()
                 .flatMap(List::stream)
@@ -197,6 +208,8 @@ public class AiRecommendationService {
                 .toList();
 
         Map<Long, FileResponse> thumbnailMap = getThumbnails(souvenirIds);
+        Set<Long> wishlistedIds = wishlistRepository.findSouvenirIdsByUserId(userId);
+        Map<Long, Long> wishlistCountMap = wishlistRepository.countBySouvenirIds(souvenirIds);
 
         return souvenirs.stream()
                 .map(s -> AiRecommendationResponse.RecommendedSouvenir.from(
@@ -206,7 +219,9 @@ public class AiRecommendationService {
                         s.getCountryCode(),
                         Optional.ofNullable(thumbnailMap.get(s.getId()))
                                 .map(FileResponse::url)
-                                .orElse(null)
+                                .orElse(null),
+                        wishlistCountMap.getOrDefault(s.getId(), 0L),
+                        wishlistedIds.contains(s.getId())
                 ))
                 .collect(Collectors.toList());
     }
